Optimize JRE, update build instructions